After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 588177 - SoupSession's timeout property does not affect connect()
SoupSession's timeout property does not affect connect()
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: API
2.27.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2009-07-09 17:49 UTC by Mark Nauwelaerts
Modified: 2009-07-13 00:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Possible patch (2.07 KB, patch)
2009-07-09 17:50 UTC, Mark Nauwelaerts
none Details | Review

Description Mark Nauwelaerts 2009-07-09 17:49:17 UTC
This is a bit of a companion bug to bug #574414.  The resolution there ensured that waiting for readable or writable state would not last longer than given timeout.  However, it is now still possible for a failing async_connect to wait for longer than the given timeout.
Comment 1 Mark Nauwelaerts 2009-07-09 17:50:30 UTC
Created attachment 138133 [details] [review]
Possible patch

* Add timeout source when waiting for (async) connect to complete.
Comment 2 Dan Winship 2009-07-13 00:21:36 UTC
thanks. committed