Make SOUP_SESSION_TIMEOUT also affect async connection

http://bugzilla.gnome.org/show_bug.cgi?id=588177